don't limit JVM in tests